@@ -1,102 +1,0 @@
-    Expt  Run  Speed
-001    1    1    850
-002    1    2    740
-003    1    3    900
-004    1    4   1070
-005    1    5    930
-006    1    6    850
-007    1    7    950
-008    1    8    980
-009    1    9    980
-010    1   10    880
-011    1   11   1000
-012    1   12    980
-013    1   13    930
-014    1   14    650
-015    1   15    760
-016    1   16    810
-017    1   17   1000
-018    1   18   1000
-019    1   19    960
-020    1   20    960
-021    2    1    960
-022    2    2    940
-023    2    3    960
-024    2    4    940
-025    2    5    880
-026    2    6    800
-027    2    7    850
-028    2    8    880
-029    2    9    900
-030    2   10    840
-031    2   11    830
-032    2   12    790
-033    2   13    810
-034    2   14    880
-035    2   15    880
-036    2   16    830
-037    2   17    800
-038    2   18    790
-039    2   19    760
-040    2   20    800
-041    3    1    880
-042    3    2    880
-043    3    3    880
-044    3    4    860
-045    3    5    720
-046    3    6    720
-047    3    7    620
-048    3    8    860
-049    3    9    970
-050    3   10    950
-051    3   11    880
-052    3   12    910
-053    3   13    850
-054    3   14    870
-055    3   15    840
-056    3   16    840
-057    3   17    850
-058    3   18    840
-059    3   19    840
-060    3   20    840
-061    4    1    890
-062    4    2    810
-063    4    3    810
-064    4    4    820
-065    4    5    800
-066    4    6    770
-067    4    7    760
-068    4    8    740
-069    4    9    750
-070    4   10    760
-071    4   11    910
-072    4   12    920
-073    4   13    890
-074    4   14    860
-075    4   15    880
-076    4   16    720
-077    4   17    840
-078    4   18    850
-079    4   19    850
-080    4   20    780
-081    5    1    890
-082    5    2    840
-083    5    3    780
-084    5    4    810
-085    5    5    760
-086    5    6    810
-087    5    7    790
-088    5    8    810
-089    5    9    820
-090    5   10    850
-091    5   11    870
-092    5   12    870
-093    5   13    810
-094    5   14    740
-095    5   15    810
-096    5   16    940
-097    5   17    950
-098    5   18    800
-099    5   19    810
-100    5   20    870
-
